INCLUDES = -I$(top_srcdir)/lib

noinst_LTLIBRARIES = libminitasn1.la

libminitasn1_la_SOURCES = libtasn1.h der.h mem.h gstr.h errors.h int.h	\
        parser_aux.h structure.h errors_int.h element.h decoding.c	\
        gstr.c errors.c parser_aux.c structure.c element.c coding.c

EXTRA_DIST = README
